fix(plugins/plugin-logui): add stack trace and error message modes
Fixes #21

--- a/plugins/plugin-logui/i18n/resources_en_US.json
+++ b/plugins/plugin-logui/i18n/resources_en_US.json
@@ -6,5 +6,7 @@
   "Level": "Level",
   "Message": "Message",
   "Details": "Details",
-  "Occurred at": "Occurred at {0}"
+  "Occurred at": "Occurred at {0}",
+  "Stack Trace": "Stack Trace",
+  "Error": "Error"
 }
